extends Control

func _on_CheckButtonMusica_toggled(button_pressed):
	pass # Replace with function body.

func _on_CheckButtonSons_toggled(button_pressed):
	pass # Replace with function body.

func _on_CheckButtonTelaCheia_toggled(button_pressed):
	pass # Replace with function body.

func _on_ButtonMenu_pressed():
	get_tree().change_scene("res://cenas/UIMenu.tscn")
